--- a/src/css/About.css
+++ b/src/css/About.css
@@ -9,9 +9,12 @@
 .aboutContext {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .aboutTitle {
+    margin-top: 1em;
     width: fit-content;
     height: fit-content;
     background-color: lightblue;
@@ -20,7 +23,8 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    padding: .4em;
+    padding: .2em;
+    margin-bottom: 1em;
 }
 
 .aboutLeft {
@@ -41,17 +45,14 @@
 .aboutRight {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    /* align-items: center; */
     justify-content: space-between;
     width: 40%;
     height: fit-content;
 }
 
 .aboutPicture {
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    justify-content: space-between;
     width: 90%;
     height: fit-content;
     background-color: lightblue;
@@ -61,13 +62,13 @@
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    margin-bottom: 1em;
 }
 
 .aboutConnect {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     width: 90%;
     height: fit-content;
     background-color: lightblue;
@@ -80,11 +81,77 @@
 }
 
 .aboutLinks {
-    color: blue;
-    text-decoration: underline;
+    margin-bottom: 5em;
 }
 
-.aboutLinks:hover {
-    cursor: pointer;
-    color: purple;
+@media (max-width: 650px) {
+    .aboutContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .aboutTitle {
+        margin-top: 1em;
+        width: 90vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        margin-bottom: 1em;
+    }
+
+    .aboutContext {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .aboutLeft {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 79vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .aboutRight {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 88vw;
+        height: fit-content;
+    }
+
+    .aboutPicture {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 90%;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
 }
