--- a/src/css/About.css
+++ b/src/css/About.css
@@ -30,6 +30,15 @@
 .aboutLeft {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 40%;
+    height: fit-content;
+}
+
+.aboutRight {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 40%;
@@ -41,15 +50,6 @@
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
-}
-.aboutRight {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    /* align-items: center; */
-    justify-content: space-between;
-    width: 40%;
-    height: fit-content;
 }
 
 .aboutPicture {
@@ -84,7 +84,7 @@
     margin-bottom: 5em;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 770px) {
     .aboutContainer {
         display: flex;
         flex-direction: column;
@@ -103,12 +103,14 @@
         border-radius: 5px;
         opacity: 0.85;
         cursor: default;
+        padding: 1.5em;
         margin-bottom: 1em;
     }
 
     .aboutContext {
         display: flex;
         flex-direction: column;
+        width: 90vw;
         align-items: center;
         justify-content: space-evenly;
     }
@@ -118,7 +120,16 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        width: 79vw;
+        width: 90vw;
+        height: fit-content;
+    }
+
+    .aboutRight {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 90vw;
         height: fit-content;
         background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -130,20 +141,116 @@
         margin-bottom: 1em;
     }
 
+    .aboutPicture {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 90vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .aboutConnect {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+}
+@media (max-width: 380px) {
+    .aboutContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .aboutTitle {
+        margin-top: 1em;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .aboutContext {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .aboutLeft {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 80vw;
+        height: fit-content;
+    }
+
     .aboutRight {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        width: 88vw;
+        width: 80vw;
         height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
     }
 
     .aboutPicture {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 90%;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .aboutConnect {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80vw;
         height: fit-content;
         background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
