--- a/src/css/CovidNearUs.css
+++ b/src/css/CovidNearUs.css
@@ -1,4 +1,4 @@
-.tripHikersContainer{
+.covidNearUsContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,21 +6,21 @@
     height: fit-content;
 }
 
-.tripHikersContext{
+.covidNearUsContext{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-evenly;
 }
 
-.tripHikersLeft {
+.covidNearUsLeft {
     display: flex;
     flex-direction: column;
     width: 40%;
     height: fit-content;
 }
 
-.tripHikersRight {
+.covidNearUsRight {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +35,7 @@
     padding: 1.5em;
 }
 
-.tripHikersTitle {
+.covidNearUsTitle {
     margin-top: 1em;
     width: 89vw;
     height: fit-content;
@@ -49,7 +49,7 @@
     margin-bottom: 1em;
 }
 
-.tripHikersVid {
+.covidNearUsVid {
     width: 100%;
     height: fit-content;
     background-color: lightblue;
@@ -62,7 +62,7 @@
     margin-bottom: 1em;
 }
 
-.tripHikersAbout{
+.covidNearUsAbout{
     display: flex;
     flex-direction: column;
     align-items: center;
