--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,6 +1,7 @@
 .projectsContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100vw;
     height: fit-content;
     background-color: #F3F3F3;
