--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -49,6 +49,22 @@
     margin-bottom: 1em;
 }
 
+.videoContainer { 
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.videoContainer iframe, .videoContainer object, .videoContainer embed {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+}
+
 .tripHikersVid {
     width: 100%;
     height: fit-content;
@@ -75,6 +91,24 @@
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+}
+
+.linkedInContainer { 
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+    height: 60vh;
+}
+
+.linkedInContainer iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%; 
 }
 
 @media (max-width: 770px) {
@@ -134,6 +168,22 @@
         margin-bottom: 1em;
     }
 
+    .videoContainer { 
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+    }
+    
+    .videoContainer iframe, .videoContainer object, .videoContainer embed {
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; 
+    }
+
     .tripHikersVid {
         display: flex;
         flex-direction: column;
@@ -165,5 +215,148 @@
         cursor: default;
         padding: 1.5em;
         margin-bottom: 1em;
+    }
+
+    .linkedInContainer { 
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        padding-top: 56.25%;
+        height: 60vh;
+    }
+    
+    .linkedInContainer iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%; 
+    }
+}
+
+@media (max-width: 380px) {
+    .tripHikersContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .tripHikersTitle {
+        margin-top: 1em;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .tripHikersContext {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .tripHikersLeft {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        width: 80vw;
+        height: fit-content;
+    }
+
+    .tripHikersRight {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .videoContainer { 
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+    }
+    
+    .videoContainer iframe, .videoContainer object, .videoContainer embed {
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; 
+    }
+
+    .tripHikersVid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .tripHikersAbout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80vw;
+        height: fit-content;
+        background-color: lightblue;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
+    }
+
+    .linkedInContainer { 
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        padding-top: 56.25%;
+        height: 60vh;
+    }
+    
+    .linkedInContainer iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%; 
     }
 }
