--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,6 +1,7 @@
 .navbarContainer {
     display: flex;
     flex-direction: row;
+    height: fit-content;
     background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
