--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -208,6 +208,7 @@
         width: 125px;
         height: auto;
         margin-bottom: 1.3em;
+        pointer-events: none;
     }
 
     .hideTitle {
@@ -316,6 +317,7 @@
         width: 200px;
         height: auto;
         margin-bottom: -.1em;
+        pointer-events: none;
     }
 
     .hideTitle {
