--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,4 +1,28 @@
+/* .navbarContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+} */
+
+.navbarMenu {
+    float: left;
+}
+
+.nameLogo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: absolute;
+    right: 10px;
+}
+
+.nameLogo:hover {
+    cursor: pointer;;
+}
+
 .lunaLogo {
     height: 40px;
     width: auto;
+    margin-right: 10px;
 }
