--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -26,20 +26,26 @@
     align-items: center;
     width: 40%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
+}
+
+.tripHikersRight:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .tripHikersTitle {
     margin-top: 1em;
     width: 89vw;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -47,6 +53,14 @@
     cursor: default;
     padding: .2em;
     margin-bottom: 1em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
+}
+
+.tripHikersTitle:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .videoContainer { 
@@ -68,14 +82,21 @@
 .tripHikersVid {
     width: 100%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.tripHikersVid:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .tripHikersAbout{
@@ -84,13 +105,20 @@
     align-items: center;
     width: 100%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
+}
+
+.tripHikersAbout:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .linkedInContainer { 
@@ -99,6 +127,9 @@
     width: 100%;
     padding-top: 56.25%;
     height: 60vh;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
 }
 
 .linkedInContainer iframe {
@@ -124,7 +155,7 @@
         margin-top: 1em;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -158,7 +189,7 @@
         justify-content: space-between;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -191,7 +222,7 @@
         justify-content: space-between;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -207,7 +238,7 @@
         align-items: center;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -249,7 +280,7 @@
         margin-top: 1em;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -283,7 +314,7 @@
         justify-content: flex-start;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -316,7 +347,7 @@
         justify-content: space-between;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -332,7 +363,7 @@
         align-items: center;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
+
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
