--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,5 +14,5 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: #F1FAEE;
   }
