--- a/src/css/CovidNearUs.css
+++ b/src/css/CovidNearUs.css
@@ -26,40 +26,61 @@
     align-items: center;
     width: 40%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.covidNearUsRight:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .covidNearUsTitle {
     margin-top: 1em;
     width: 89vw;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: .2em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.covidNearUsTitle:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .covidNearUsVid {
     width: 100%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.covidNearUsVid:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .covidNearUsAbout{
@@ -68,13 +89,20 @@
     align-items: center;
     width: 100%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.covidNearUsAbout:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .frameContainer { 
@@ -83,6 +111,9 @@
     width: 100%;
     padding-top: 56.25%;
     height: 60vh;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
 }
 
 .frameContainer iframe {
@@ -248,7 +279,7 @@
     }
 
     .covidNearUsTitle {
-        margin-top: 1em;
+    margin-top: 1em;
     width: 89vw;
     height: fit-content;
     background-color: lightblue;
