--- a/src/css/About.css
+++ b/src/css/About.css
@@ -17,14 +17,21 @@
     margin-top: 1em;
     width: 89vw;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: .2em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.aboutTitle:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 
@@ -38,13 +45,20 @@
 .aboutRight {
     width: 40%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.aboutRight:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .aboutPicture {
@@ -52,14 +66,21 @@
     flex-direction: column;
     width: 90%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.aboutPicture:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .aboutConnect {
@@ -68,13 +89,20 @@
     align-items: center;
     width: 90%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.aboutConnect:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 @media (max-width: 770px) {
