--- a/src/css/About.css
+++ b/src/css/About.css
@@ -34,7 +34,6 @@
     transform: scale(1.02);
 }
 
-
 .aboutLeft {
     display: flex;
     flex-direction: column;
@@ -78,6 +77,13 @@
     margin-bottom: 1em;
 }
 
+.aboutPhoto {
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
+    border-radius: 5px;
+}
+
 .aboutPicture:hover {
     transition: transform .5s ease;
     transform: scale(1.02);
@@ -118,7 +124,6 @@
         margin-top: 1em;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -152,7 +157,6 @@
         justify-content: space-between;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -169,7 +173,6 @@
         justify-content: space-between;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -185,7 +188,6 @@
         align-items: center;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -209,7 +211,6 @@
         margin-top: 1em;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -243,7 +244,6 @@
         justify-content: flex-start;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -260,7 +260,6 @@
         justify-content: space-between;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -276,7 +275,6 @@
         align-items: center;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
