--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -17,16 +17,22 @@
     margin-top: 1em;
     width: 89vw;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: .2em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
 }
 
+.esTitle:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
+}
 
 .esLeft {
     display: flex;
@@ -38,13 +44,20 @@
 .esRight {
     width: 40%;
     height: 78vh;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.esRight:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .esPursuit {
@@ -53,14 +66,21 @@
     align-items: center;
     width: 90%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     margin-bottom: 1em;
+}
+
+.esPursuit:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .esBaruch {
@@ -69,13 +89,20 @@
     align-items: center;
     width: 90%;
     height: fit-content;
-    background-color: lightblue;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
+    background-color: #31729b;
+    border: solid 3px #1D3557;
+    color: #F1FAEE;
     padding: 1.5em;
+}
+
+.esBaruch:hover {
+    transition: transform .5s ease;
+    transform: scale(1.02);
 }
 
 .iconRow{
@@ -119,7 +146,6 @@
         margin-top: 1em;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -153,7 +179,6 @@
         justify-content: space-between;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -170,7 +195,6 @@
         align-items: center;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -186,7 +210,6 @@
         align-items: center;
         width: 90vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -229,7 +252,6 @@
         margin-top: 1em;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -263,7 +285,6 @@
         justify-content: flex-start;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -279,7 +300,6 @@
         align-items: center;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -295,7 +315,6 @@
         align-items: center;
         width: 80vw;
         height: fit-content;
-        background-color: lightblue;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
