--- a/src/css/CovidNearUs.css
+++ b/src/css/CovidNearUs.css
@@ -281,16 +281,16 @@
     }
 
     .covidNearUsTitle {
-    margin-top: 1em;
-    width: 89vw;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    padding: .2em;
-    margin-bottom: 1em;
+        margin-top: 1em;
+        width: 80vw;
+        height: fit-content;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border-radius: 5px;
+        opacity: 0.85;
+        cursor: default;
+        padding: 1.5em;
+        margin-bottom: 1em;
     }
 
     .covidNearUsContext {
@@ -317,7 +317,6 @@
         justify-content: flex-start;
         width: 80vw;
         height: fit-content;
-
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -334,7 +333,6 @@
         justify-content: space-between;
         width: 80vw;
         height: fit-content;
-
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
@@ -350,7 +348,6 @@
         align-items: center;
         width: 80vw;
         height: fit-content;
-
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         border-radius: 5px;
