--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -42,8 +42,11 @@
 }
 
 .esRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 40%;
-    height: 78vh;
+    height: 85.7vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
