--- a/src/css/About.css
+++ b/src/css/About.css
@@ -42,6 +42,10 @@
 }
 
 .aboutRight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     width: 40%;
     height: fit-content;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -109,6 +113,13 @@
 .aboutConnect:hover {
     transition: transform .5s ease;
     transform: scale(1.02);
+}
+
+.buttonsAbout {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 25vh;
 }
 
 @media (max-width: 770px) {
