--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -46,7 +46,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 40%;
-    height: 85.7vh;
+    height: fit-content;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
