--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: 124.5vh;
+    height: fit-content;
     justify-content: space-between;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -400,10 +400,11 @@
 
     .buttonsContainer {
         display: flex;
-        justify-content: space-evenly;
         flex-direction: column;
         width: 100%;
         height: max-content;
+        justify-content: space-evenly;
+        height: 25vh;
         margin-bottom: 1em;
     }
 }
