--- a/src/css/About.css
+++ b/src/css/About.css
@@ -220,7 +220,7 @@
 
     .aboutTitle {
         margin-top: 1em;
-        width: 80vw;
+        width: 80%;
         height: fit-content;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
@@ -234,7 +234,7 @@
     .aboutContext {
         display: flex;
         flex-direction: column;
-        width: 80vw;
+        width: 91%;
         align-items: center;
         justify-content: space-evenly;
     }
@@ -244,7 +244,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        width: 80vw;
+        width: 91%;
         height: fit-content;
     }
 
@@ -253,7 +253,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        width: 80vw;
+        width: 88%;
         height: fit-content;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
@@ -269,7 +269,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        width: 80vw;
+        width: 95%;
         height: fit-content;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
@@ -284,7 +284,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 80vw;
+        width: 95%;
         height: fit-content;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
