--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     align-items: center;
     position: absolute;
-    right: 10px;
+    right: 0;
 }
 
 .nameLogo:hover {
