--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: fit-content;
 }
 
@@ -153,7 +153,7 @@
     margin-bottom: 1em;
 }
 
-@media (max-width: 770px) {
+@media (max-width: 1025px) {
     .tripHikersContainer {
         display: flex;
         flex-direction: column;
@@ -285,7 +285,7 @@
         width: 100%;
         height: max-content;
         justify-content: space-evenly;
-        height: 25vh;
+        height: 15vh;
         margin-bottom: 1em;
     }
 }
