--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: fit-content;
 }
 
@@ -32,10 +32,10 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    padding: 1.5em;
     background-color: #31729b;
     border: solid 3px #1D3557;
     color: #F1FAEE;
+    padding: 1.5em;
 }
 
 .tripHikersRight:hover {
@@ -53,10 +53,10 @@
     opacity: 0.85;
     cursor: default;
     padding: .2em;
-    margin-bottom: 1em;
     background-color: #31729b;
     border: solid 3px #1D3557;
     color: #F1FAEE;
+    margin-bottom: 1em;
 }
 
 .tripHikersTitle:hover {
@@ -112,10 +112,10 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    padding: 1.5em;
     background-color: #31729b;
     border: solid 3px #1D3557;
     color: #F1FAEE;
+    padding: 1.5em;
 }
 
 .tripHikersAbout:hover {
@@ -290,7 +290,7 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 464px) {
     .tripHikersContainer {
         display: flex;
         flex-direction: column;
