--- a/src/css/About.css
+++ b/src/css/About.css
@@ -88,7 +88,8 @@
     border-radius: 5px;
     background-repeat: no-repeat;
     background-size:cover;
-    height: fit-content;
+    width: 100%;
+    height: auto;
     background-position: center center;
 }
 
