--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,12 +1,70 @@
 .aboutContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: 95vh;
+    width: 100%;
+    height: 100%;
 }
 
-.aboutContext {
+.aboutContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    animation: 1.5s ease-out 0s 1 slideInFromLeft;
+    padding: 60px;
+}
+
+.aboutIntro {
+    display: flex;
+    flex-direction: row;
+}
+
+.aboutMe {
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+}
+
+.aboutName {
+    color: #AFD8F2;
+    font-weight: 800;
+}
+
+.aboutButton {
+    max-width: 20%;
+    background-color: white;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: solid 2px #AFD8F2;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    color: #AFD8F2;
+    border-radius: 12px;
+}
+
+.aboutButton:hover {
+    background-color: rgb(248, 248, 248);
+    cursor: pointer;
+    transition: transform .5s ease;
+    transform: scale(1.1);
+}
+
+.aboutButton:focus {
+    outline: none;
+  }
+
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+}
+
+/* .aboutContext {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -23,9 +81,9 @@
     opacity: 0.85;
     cursor: default;
     padding: .2em;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     margin-bottom: 1em;
 }
 
@@ -53,9 +111,9 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     padding: 1.5em;
 }
 
@@ -75,16 +133,16 @@
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     margin-bottom: 1em;
 }
 
 .aboutPhoto {
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     border-radius: 5px;
     background-repeat: no-repeat;
     background-size:cover;
@@ -109,9 +167,9 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     padding: 1.5em;
 }
 
@@ -299,4 +357,4 @@
         padding: 1.5em;
         margin-bottom: 1em;
     }
-}
+} */
