--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,18 +1,25 @@
+/* Navy blue: #1F3541;
+white: #f8f8f8;
+light blue: #AFD8F2; */
+
 #back-to-top-anchor {
     height: 0;
 }
 
 .App {
     text-align: center;
+    background-color: white;
+    height: fit-content;
   }
   
   .App-header {
-    background-color: #282c34;
+    background-color: #AFD8F2;
+    /* background-color: #f8f8f8; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: #F1FAEE;
+    /* color: #1F3541; */
   }
