--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    height: 95vh;
+    height: fit-content;
 }
 
 .esContext {
@@ -23,9 +23,9 @@
     opacity: 0.85;
     cursor: default;
     padding: .2em;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     margin-bottom: 1em;
 }
 
@@ -52,9 +52,9 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     padding: 1.5em;
 }
 
@@ -75,9 +75,9 @@
     opacity: 0.85;
     cursor: default;
     padding: 1.5em;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     margin-bottom: 1em;
 }
 
@@ -97,9 +97,9 @@
     border-radius: 5px;
     opacity: 0.85;
     cursor: default;
-    background-color: #31729b;
-    border: solid 3px #1D3557;
-    color: #F1FAEE;
+    background-color: #f8f8f8;
+    border: solid 5px #1F3541;
+    color: #1F3541;
     padding: 1.5em;
 }
 
