adds css animations fade in

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .aboutContent {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    animation: 1.5s ease-out 0s 1 slideInFromLeft;
+    animation: 1.5s ease-out 0s 1 slideLeftFade;
     padding: 60px;
 }
 
@@ -55,12 +55,23 @@
     outline: none;
   }
 
-@keyframes slideInFromLeft {
+@keyframes slideLeftFade {
     0% {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    25% {
+        opacity: .4;
+    }
+    50% {
+        opacity: .6;
+    }
+    75% {
+        opacity: .8;
     }
     100% {
-      transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
