--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -27,41 +27,27 @@
     width: 40%;
     height: fit-content;
     justify-content: space-between;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    opacity: 0.85;
+    opacity: 0.85; */
     cursor: default;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    padding: 1.5em;
+    /* background-color: #f8f8f8;
+    border: solid 5px #79bfeb; */
+    color: #79bfeb;
+    /* padding: 1.5em; */
 }
 
-.tripHikersRight:hover {
+/* .tripHikersRight:hover {
     transition: transform .5s ease;
     transform: scale(1.02);
-}
+} */
 
 .tripHikersTitle {
-    margin-top: 1em;
-    width: 89vw;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    padding: .2em;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    margin-bottom: 1em;
-}
-
-.tripHikersTitle:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
+    font-family: "Arial Black", sans-serif;
+    font-size: 40px;
+    width: 100%;
+    color: #79bfeb;
 }
 
 .videoContainer { 
@@ -81,46 +67,14 @@
     height: 100%; 
 }
 
-.tripHikersVid {
-    width: 100%;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    padding: 1.5em;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    margin-bottom: 1em;
-}
-
-.tripHikersVid:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-}
-
 .tripHikersAbout{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    padding: 1.5em;
-}
-
-.tripHikersAbout:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
+    color: #79bfeb;
+    /* padding: 1.5em; */
 }
 
 .linkedInContainer { 
@@ -129,10 +83,6 @@
     width: 100%;
     padding-top: 56.25%;
     height: 60vh;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    border-radius: 5px;
 }
 
 .linkedInContainer iframe {
@@ -153,7 +103,7 @@
     margin-bottom: 1em;
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
     .tripHikersContainer {
         display: flex;
         flex-direction: column;
@@ -421,4 +371,4 @@
         height: 25vh;
         margin-bottom: 1em;
     }
-}
+} */
