--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,3 +1,11 @@
+.projectTitle{
+    color: #79bfeb;
+    font-family: "Arial Black", sans-serif;
+    font-size: 40px;
+    width: 100%;
+    text-align: right;
+}
+
 .projectTriphikers {
     width: 100vw;
     height: fit-content;
