--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,4 +10,33 @@ light blue: #AFD8F2; */
     text-align: center;
     background-color: white;
     height: fit-content;
-  }
+}
+
+.scrollToTop {
+    position: fixed;
+    bottom: 12px;
+    left: 50%;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: #79bfeb;
+    color: white;
+    z-index: 1;
+    cursor:pointer;
+    text-align: center;
+}
+
+.scrollToTop .p {
+    margin-top: 10px;
+    font-size: 50px;
+    animation: scrollTop 0.5s alternate ease infinite;
+}
+
+@keyframes scrollTop {
+    from {
+        transform: translateY(2px);
+    }
+    to {
+        transform: translateY(-1px);
+    }
+}
