--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -12,7 +12,7 @@
 .esTitle{
     color: #79bfeb;
     font-family: "Arial Black", sans-serif;
-    font-size: 40px;
+    font-size: 70px;
     width: 100%;
     text-align: left;
 }
@@ -32,6 +32,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .esRight {
     display: flex;
     flex-direction: column;
@@ -47,7 +48,7 @@
 .pursuitTitle {
     color: white;
     font-family: "Arial Black", sans-serif;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 .pursuitTitle:hover {
@@ -58,8 +59,10 @@
 
 .esP {
     color: white;
-    font-size: 20px;
     text-align: left;
+    letter-spacing: 2px;
+    font-size: 1.6rem;
+    font-weight: 300;
 }
 
 .iconRow {
@@ -79,16 +82,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 40%;
+    width: 50%;
 }
 
 .pursuitIcon {
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px #79bfeb;
-    width: 60px;
-    height: 60px;
-    border-radius: 2em;
+    width: 90px;
+    height: 90px;
+    border-radius: 3em;
 }
 
 .pursuitIcon:hover {
