--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -2,46 +2,89 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: fit-content;
 }
 
 .tripHikersContext{
+    max-width: 85em;
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
+}
+
+
+.tripHikersAbout{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 80%;
 }
 
 .tripHikersLeft {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    align-items: center;
+    width: 55%;
+}
+
+.tripHikersRight {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+
+.tripHikersTitle {
+    font-family: "Arial Black", sans-serif;
+    font-size: 50px;
+    width: 100%;
+    color: #79bfeb;
+}
+
+.projectsP { 
+    letter-spacing: 2px;
+    font-size: 1.6rem;
+    font-weight: 300;
+}
+
+.videoContainer { 
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.videoContainer iframe, .videoContainer object, .videoContainer embed {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+}
+
+/* .tripHikersContext{
+    max-width: 85em;
+    height: fit-content;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.tripHikersLeft {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
     height: fit-content;
 }
 
 .tripHikersRight {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 40%;
     height: fit-content;
-    justify-content: space-between;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85; */
-    cursor: default;
-    /* background-color: #f8f8f8;
-    border: solid 5px #79bfeb; */
     color: #79bfeb;
-    /* padding: 1.5em; */
 }
-
-/* .tripHikersRight:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-} */
 
 .tripHikersTitle {
     font-family: "Arial Black", sans-serif;
@@ -71,10 +114,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: fit-content;
-    color: #79bfeb;
-    /* padding: 1.5em; */
+    width: 85%;
+    height: 100vh;
+}
+
+.projectsP { 
+    font: 70px;
+    text-align: left;
 }
 
 .linkedInContainer { 
@@ -82,7 +128,7 @@
     overflow: hidden;
     width: 100%;
     padding-top: 56.25%;
-    height: 60vh;
+    height: 40vh;
 }
 
 .linkedInContainer iframe {
@@ -101,7 +147,7 @@
     width: 100%;
     height: max-content;
     margin-bottom: 1em;
-}
+} */
 
 /* @media (max-width: 1024px) {
     .tripHikersContainer {
