adds animation and new css to about and scroll

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,14 +23,13 @@ light blue: #AFD8F2; */
     color: white;
     z-index: 1;
     cursor:pointer;
-    text-align: center;
     border: solid 1px white;
 }
 
-.scrollToTop .p {
-    margin-top: 10px;
-    font-size: 50px;
-    animation: scrollTop 0.5s alternate ease infinite;
+.scrollToTop .icon {
+    margin-top: 5px;
+    font-size: 25px;
+    animation: scrollTop 0.6s alternate ease infinite;
 }
 
 @keyframes scrollTop {
@@ -38,6 +37,6 @@ light blue: #AFD8F2; */
         transform: translateY(2px);
     }
     to {
-        transform: translateY(-1px);
+        transform: translateY(-2px);
     }
 }
