--- a/src/css/About.css
+++ b/src/css/About.css
@@ -103,10 +103,10 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px #79bfeb;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
-    border-radius: 2em;
+    border-radius: 100%;
     animation: 1.9s ease-in 0s 1 aboutMeSlideLeftFade;
 }
 
