--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,4 +1,53 @@
 .contactContainer {
     width: 100%;
     height: 100vh;
+    background-color: #79bfeb;
 }
+
+.contactTitle{
+    color: white;
+    font-family: "Arial Black", sans-serif;
+    font-size: 70px;
+    width: 100%;
+    text-align: center;
+}
+
+.contactButtonContainer {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: 50%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contactButton {
+    background-color: white;
+    color: #79bfeb;
+    width: 30%;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: solid 2px white;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 12px;
+}
+
+.contactButton:hover {
+    cursor: pointer;
+    background-color: #79bfeb;
+    color: white;
+    transition: transform .5s ease;
+    transform: scale(1.1);
+}
+
+/* .contactButton:hover :after{
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    content: 'Open';
+} */
