--- a/src/css/About.css
+++ b/src/css/About.css
@@ -62,7 +62,7 @@
     margin: 0 auto;
     letter-spacing: .1em;
     animation: 
-    typing 4.5s steps(25, end) infinite,
+    typing 4.5s steps(20, end) 3,
     blink-caret .75s step-end infinite;
 }
 
@@ -159,7 +159,7 @@
 
 @keyframes typing {
     from { width: 0 }
-    to { width: 47% }
+    to { width: 44% }
 }
 
 @keyframes blink-caret {
